--- a/dselect/dselect.8
+++ b/dselect/dselect.8
@@ -8,8 +8,8 @@ dselect \- Debian package management frontend
 [\-\-colour | \-\-color screenpart:[foreground],[background][:attr[+attr+..]]]
 .SH DESCRIPTION
 .B dselect
-is the primary user interface for managing packages on a Debian system.
-At the \fBdselect\fP main menu, the system administrator can:
+is one of the primary user interfaces for managing packages on a Debian
+system.  At the \fBdselect\fP main menu, the system administrator can:
  \- Update the list of available package versions,
  \- View the status of installed and available packages,
  \- Alter package selections and manage dependencies,
@@ -414,9 +414,6 @@ The
 .B dselect
 package selection interface is confusing to some new users.
 Reportedly, it even makes seasoned kernel developers cry.
-.sp
-.B dselect
-doesn't handle Recommends: field very well.
 .sp
 The documentation is lacking.
 .sp
