--- a/main/dpkg-query.8
+++ b/main/dpkg-query.8
@@ -41,7 +41,9 @@ installation-scripts are not listed.
 .TP
 \fB-S\fP | \fB--search\fP \fIfilename-search-pattern\fP ...
 Search for a filename from installed packages. All standard shell
-wildchars can be used in the pattern.
+wildchars can be used in the pattern.  This command will not list
+extra files created by maintainer scripts, nor will it list
+alternatives.
 .TP
 \fB-p\fP |\fB--print-avail\fP package
 Display details about \fIpackage\fP, as found in
