--- a/man/en/deb-control.5
+++ b/man/en/deb-control.5
@@ -148,9 +148,9 @@ field to force removal of the other package, if this one also has the
 same files as the conflicted package.
 .TP
 .BR Provides: \ <package\ list>
-This is a list of virtual packages that this one provides. Usuaully this is
+This is a list of virtual packages that this one provides. Usually this is
 used in the case of several packages all providing the same service.
-For example, sendmail and exim can can serve as a mail server, so they
+For example, sendmail and exim can serve as a mail server, so they
 provide a common package (`mail-transport-agent') on which other packages
 can depend. This will allow sendmail or exim to serve as a valid option
 to satisy the dependency. This prevents the packages that depend on a mail
