--- a/utils/start-stop-daemon.8
+++ b/utils/start-stop-daemon.8
@@ -82,6 +82,9 @@ Check for processes owned by the user specified by
 or
 .IR uid .
 .TP
+\fB-g\fP|\fB--group\fP \fIgroup\fP|\fIgid\fP
+Change to \fIgroup\fP or \fIgid\fP when starting the process.
+.TP
 \fB-n\fP|\fB--name\fP \fIprocess-name\fP
 Check for processes with the name
 .I process-name
@@ -193,7 +196,7 @@ reason. This is a last resort, and is only meant for programs that either
 make no sense forking on their own, or where it's not feasible to add the
 code for it to do this itself.
 .TP
-.BR -N | --nicelevel
+\fB-N\fP|\fB--nicelevel\fP \fIint\fP 
 This alters the prority of the process before starting it.
 .TP
 .BR -m | --make-pidfile
