* scripts/update-alternatives.{pl,8}:   * Apply patch that provides --set and --remove-all commands.   * --all calls --config on all alternatives. * scripts/update-alternatives.pl:   * Alter --config prompt, to be more clear, that one must 'press' enter to     accept the default.   * Fix some -w issues.   * Check whether the target path exists when removing.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+Sun Sep 14 16:53:09 CDT 2003 Adam Heath <doogie@debian.org>
+
+  * scripts/update-alternatives.{pl,8}:
+    * Apply patch that provides --set and --remove-all commands.
+    * --all calls --config on all alternatives.
+  * scripts/update-alternatives.pl:
+    * Alter --config prompt, to be more clear, that one must 'press' enter
+      to accept the default.
+    * Fix some -w issues.
+    * Check whether the target path exists when removing.
+
 Sat Sep 13 20:48:02 CDT 2003 Adam Heath <doogie@debian.org>
 
   * scripts/update-alternatives.8: Add --config to action section, and add
