--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Sep 14 21:44:01 CDT 2003 Adam Heath <doogie@debian.org>
+
+  * po/ca.po: Updated.
+
 Sun, 14 Sep 2003 21:16:18 -0500 Adam Heath <doogie@debian.org>
 
   * scripts/controllib.pl, scripts/dpkg-checkbuilddeps.pl: Moved dependency
