--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 dpkg (1.10.11) unstable; urgency=low
 
+  * Updated ca.po.
   * Teach dpkg-source that ~ is legal in version numbers
   * Add build-depends on sgml-base, and increase gettext build-depends to
     0.12.1-3.
