Fix broken os_type detection on linux.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Sep 14 21:45:44 CDT 2003 Adam Heath <doogie@debian.org>
+
+  * configure.in: Fix broken os_type detection on linux.
+
 Sun Sep 14 21:44:01 CDT 2003 Adam Heath <doogie@debian.org>
 
   * po/ca.po: Updated.
