In dpkg-buildpackage, call debian/rules -qn build-arch, and if it's available, modify -B handling appropriately.  If build-arch is not available, then when -B was called, do *not* pass -B on to dpkg-checkbuilddeps.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Mon Sep 15 18:48:39 CDT 2003 Adam Heath <doogie@debian.org>
+
+  * scripts/dpkg-buildpackage.sh: Call debian/rules -qn build-arch, and if
+    it's available, modify -B handling appropriately.  If build-arch is not
+    available, then when -B was called, do *not* pass -B on to
+    dpkg-checkbuilddeps.
+
 Sun Sep 14 21:45:44 CDT 2003 Adam Heath <doogie@debian.org>
 
   * configure.in: Fix broken os_type detection on linux.
