Install /usr/share/doc/dpkg/pseudo-tags, which talks about the bug titling we use to mark bugs for filtering in the Debian bts.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Mon Sep 15 18:53:06 CDT 2003 Adam Heath <doogie@debian.org>
+
+  * debian/rules, debian/pseudo-tags: Install
+    /usr/share/doc/dpkg/pseudo-tags, which talks about the bug titling we
+    use to mark bugs for filtering in the Debian bts.
+
 Mon Sep 15 18:48:39 CDT 2003 Adam Heath <doogie@debian.org>
 
   * scripts/dpkg-buildpackage.sh: Call debian/rules -qn build-arch, and if
