--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Sep 16 12:50:44 CDT 2003 Adam Heath <doogie@debian.org>
+
+  * scripts/update-alternatives.pl: Remove -w, as it causes runtime
+    warnings.  The code isn't clean enough yet to support it.
+
 Mon Sep 15 19:08:28 CDT 2003 Adam Heath <doogie@debian.org>
 
   * debian/rules: No longer generate any BYHAND files.  Also, fix bug in
