Updated for 1.10.11 release.

--- a/debian/changelog
+++ b/debian/changelog
@@ -151,7 +151,7 @@ dpkg (1.10.11) unstable; urgency=low
   * Colin Walters <walters@debian.org>:
     After opening files, set binmode.  Closes: #175363
 
- -- Wichert Akkerman <debian@extern.wiggy.net>  Sun, 14 Sep 2003 20:15:31 -0500
+ -- Adam Heath <doogie@debian.org>  Tue, 16 Sep 2003 12:52:11 -0500
 
 dpkg (1.10.10) unstable; urgency=low
 
