--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Sep 16 12:52:42 CDT 2003 Adam Heath <doogie@debian.org>
+
+  * version-nr, debian/changelog: Updated for 1.10.11 release.
+
 Tue Sep 16 12:50:44 CDT 2003 Adam Heath <doogie@debian.org>
 
   * scripts/update-alternatives.pl: Remove -w, as it causes runtime
