--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Sep 16 13:06:01 CDT 2003 Adam Heath <doogie@debian.org>
+
+  * scripts/dpkg-genchanges.pl: Ignore 'o:.*' in %fi.
+
 Tue Sep 16 13:02:10 CDT 2003 Adam Heath <doogie@debian.org>
 
   * scripts/dpkg-source.pl: Ignore 'o:.*' in %fi.
