--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.10.12) unstable; urgency=low
+
+  * Fix dpkg-source output of build-depends lines.
+
+ -- Adam Heath <doogie@debian.org>  Tue, 16 Sep 2003 13:43:45 -0500
+
 dpkg (1.10.11) unstable; urgency=low
 
   * dpkg no longer provides any BYHAND files.  If you need the source
