* scripts/controllib.pl: Fix parsing of deps when both () and [] are   specified. * scripts/controllib.pl: Set $host_arch in controllib.pl:parsedep. * scripts/dpkg-checkbuilddeps.pl: Don't output the [] stuff when finding   invalid deps.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,14 @@
 dpkg (1.10.12) unstable; urgency=low
 
+  * Fix parsing of deps when both () and [] are specified.
+  * Set $host_arch in controllib.pl:parsedep.
+  * dpkg-checkbuilddeps doesn't output the [] stuff when finding invalid
+    deps.
+
+ -- Adam Heath <doogie@debian.org>  Wed, 17 Sep 2003 13:23:15 -0500
+
+dpkg (1.10.12) unstable; urgency=low
+
   * Fix dpkg-source output of build-depends lines.
 
  -- Adam Heath <doogie@debian.org>  Tue, 16 Sep 2003 13:43:45 -0500
