--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Wed Sep 17 13:23:15 CDT 2003 Adam Heath <doogie@debian.org>
+
+  * scripts/controllib.pl: Fix parsing of deps when both () and [] are
+    specified.
+  * scripts/controllib.pl: Set $host_arch in controllib.pl:parsedep.
+  * scripts/dpkg-checkbuilddeps.pl: Don't output the [] stuff when finding
+    invalid deps.
+
 Tue Sep 16 13:44:06 CDT 2003 Adam Heath <doogie@debian.org>
 
   * scripts/dpkg-source.pl: Fix generation of dependency lines.
