--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Sep 17 13:26:14 CDT 2003 Adam Heath <doogie@debian.org>
+
+  * debian/changelog, version-nr: Updated to 1.10.13.
+
 Wed Sep 17 13:23:15 CDT 2003 Adam Heath <doogie@debian.org>
 
   * scripts/controllib.pl: Fix parsing of deps when both () and [] are
