Updated for 1.10.14 release.

--- a/debian/changelog
+++ b/debian/changelog
@@ -21,7 +21,7 @@ dpkg (1.10.14) unstable; urgency=low
     system-installed copy of dpkg-shlibdeps.  Now, both are called from
     the build directory.
 
- -- Adam Heath <doogie@debian.org>  UNRELEASED
+ -- Adam Heath <doogie@debian.org>  Fri, 19 Sep 2003 12:29:34 -0500
 
 dpkg (1.10.13) unstable; urgency=low
 
