* lib/varbuf.c, configure.in: Fix va_copy detection. * scripts/dpkg-buildpackage.sh: Back out debian/rules build-arch detection.   It is *not* possible *at all* to detect available targets in a rules   file.  Period.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Fri Sep 19 19:56:48 CDT 2003 Adam Heath <doogie@debian.org>
+
+  * lib/varbuf.c, configure.in: Fix va_copy detection.
+  * scripts/dpkg-buildpackage.sh: Back out debian/rules build-arch
+    detection.  It is *not* possible *at all* to detect available targets
+    in a rules file.  Period.
+
 Fri Sep 19 12:26:54 CDT 2003 Adam Heath <doogie@debian.org>
 
   * scripts/{controllib,dpkg-{source,checkbuilddeps,control}}.pl:
