--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Sep 19 20:02:19 CDT 2003 Adam Heath <doogie@debian.org>
+
+  * debian/changelog: Set date/time for 1.10.15 release.
+ 
 Fri Sep 19 19:56:48 CDT 2003 Adam Heath <doogie@debian.org>
 
   * lib/varbuf.c, configure.in: Fix va_copy detection.
