--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+dpkg (1.10.16) unstable; urgency=low
+
+ -- Adam Heath <doogie@debian.org>  UNRELEASED
+
 dpkg (1.10.15) unstable; urgency=low
 
   * Fix detection of va_copy.
